Repair of unvisible jumbotron background image, new path to image in SCSS

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -74,7 +74,7 @@ body {
     min-height: 100vh;
 
     &--background {
-        background-image: url(/assets/img/jumbotron.jpg);
+        background-image: url('../assets/img/jumbotron.jpg');
         background-position: center;
         background-size: cover;
     }
